src/objects/TRACTBillingAccountCategory__c.object
<CustomObject>
    <label>GotransverseBillingAccountCategory</label>
    <nameField>
        <label>GotransverseBillingAccountCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GotransverseBillingAccountCategorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>description__c</fullName>
        <label>Gotransverse Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Gotransverse Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type_x__c</fullName>
        <label>Gotransverse Type_x</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>